; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2c.c_I2CFIFODataGetNonBlocking.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2c.c_I2CFIFODataGetNonBlocking.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@I2C_O_FIFOSTATUS = common dso_local global i32 0, align 4
@I2C_FIFOSTATUS_RXFE = common dso_local global i32 0, align 4
@I2C_O_FIFODATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @I2CFIFODataGetNonBlocking(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @_I2CBaseValid(i32 %6)
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @I2C_O_FIFOSTATUS, align 4
  %11 = add nsw i32 %9, %10
  %12 = call i32 @HWREG(i32 %11)
  %13 = load i32, i32* @I2C_FIFOSTATUS_RXFE, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @I2C_O_FIFODATA, align 4
  %20 = add nsw i32 %18, %19
  %21 = call i32 @HWREG(i32 %20)
  %22 = load i32*, i32** %5, align 8
  store i32 %21, i32* %22, align 4
  store i32 1, i32* %3, align 4
  br label %23

23:                                               ; preds = %17, %16
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @_I2CBaseValid(i32) #1

declare dso_local i32 @HWREG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
